--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="utf-8">
     <title>Neo4j PubNub</title>
     <script src="index.js" charset="utf-8"></script>
-    <script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
-    <script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
-    <script src="http://cdn.pubnub.com/pubnub-3.7.12.min.js"></script>
+<!--     <script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
+<script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script> -->
+    <script src="https://cdn.pubnub.com/pubnub-3.7.13.min.js"></script>
+    <script src="jquery.js" charset="utf-8"></script>
 
     <style>
       #train-1{
@@ -18,10 +19,10 @@
         font-size: 50px;
       }
 
-      #number{
-        font-size: 50px;
-        color: #006600;
-      }
+    #number{
+      font-size: 50px;
+      color: #006600;
+    }
     </style>
 
   </head>
@@ -36,7 +37,7 @@
   </body>
 
   <script type="text/javascript">
-  $( document ).ready(function() {
+  $(document).ready(function() {
     var pubnub = PUBNUB({
         publish_key   : 'demo',
         subscribe_key : 'demo'
